--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,11 @@
     <groupId>com.github.OriginStampTimestamping</groupId>
     <artifactId>aion-wrapper-bridge</artifactId>
     <version>0.0.1</version>
+
     <properties>
         <java.version>11</java.version>
     </properties>
+
 	<build>
         <plugins>
             <plugin>
@@ -22,6 +24,16 @@
             </plugin>
         </plugins>
     </build>
+
+    <repositories>
+        <repository>
+            <id>local-repo</id>
+            <name>AION libs</name>
+            <url>file:///${basedir}/maven_repo/</url>
+            <layout>default</layout>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>network.aion</groupId>
