--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,11 @@
     <groupId>com.github.OriginStampTimestamping</groupId>
     <artifactId>aion-wrapper-bridge</artifactId>
     <version>0.0.1</version>
+
     <properties>
         <java.version>11</java.version>
     </properties>
+
 	<build>
         <plugins>
             <plugin>
@@ -22,6 +24,22 @@
             </plugin>
         </plugins>
     </build>
+
+    <repositories>
+        <repository>
+            <id>githubrepository</id>
+            <url>https://github.com/OriginStampTimestamping/aion-wrapper-bridge/raw/master/maven_repo</url>
+        </repository>
+    </repositories>
+
+    <distributionManagement>
+        <!-- Used as deployment repository in GitHub -->
+        <repository>
+            <id>com.originstamp</id>
+            <url>https://maven.pkg.github.com/OriginStampTimestamping/aion-wrapper-bridge</url>
+        </repository>
+    </distributionManagement>
+
     <dependencies>
         <dependency>
             <groupId>network.aion</groupId>
@@ -136,11 +154,4 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
-    <repositories>
-        <repository>
-            <id>githubrepository</id>
-            <url>https://github.com/OriginStampTimestamping/aion-wrapper-bridge/raw/master/maven_repo</url>
-        </repository>
-    </repositories>
 </project>
